# Portfolio

./: .gitmodules  .travis.yml  CNAME  Makefile  a-wild-hypothesis-appeared.html  a-wild-itertools-appeared.html  app.py  application.py  bridging-the-temporal-chasm.html  code_creator.py  content_management.py  data-science-for-social-good.html  generative-models.html  going-mouseless-or-how-i-learned-to-stop-clicking-and-love-the-clack.html  index.html  index2.html  insight-project-demo.html  lessons-learned-from-writing-a-phd-dissertation-in-markdown.html  makefile  making-this-website.html  migrating-from-keras-to-pytorch-in-2020.html  packaging-with-poetry-and-pipx.html  pelicanconf.py  posts.sqlite  publishconf.py  pyproject.toml  recyclops-pt-1.html  requirements.txt  settings.cfg  should-you-switch-to-manjaro-linux.html  thoughts-on-reproducibility-in-data-science.html  website-redesign.html
.ebextensions/: python.config
author/: jon-steven-dal-williams.html  jon-steven-dal-williams2.html
category/: blog.html  projects.html  talks.html  tutorial.html  tutorials.html
content/: async.rst  cli_packaging.rst  distrohopping.rst  generative_models.rst  going_mouseless.rst  hypothesis.rst  insight_demo.rst  migrating_this_website.rst  pytorch_migration.rst  recyclops.rst  recyclops_2.rst
controllers/: controllers.py
core/: __init__.py  config.py  swagger.yaml
drafts/: miscellaneous-great-content.html
feeds/: blog.atom.xml  talks.atom.xml  tutorial.atom.xml  tutorials.atom.xml
models/: __init__.py  models.py
pages/: .html  about-me.html  markdown_thesis.md  (+3 more)
(+80 files in other folders)
